cmake_minimum_required(VERSION 2.8)
project(untitled14)

set(CMAKE_CXX_STANDARD 11)
add_definitions(-std=c++11)

add_executable(untitled14 main.cpp)

add_executable(floodfill floodfill.cpp)

add_executable(largest_val_each_row largest_val_each_row.cpp)

add_executable(sum_root_to_leaf sum_root_to_leaf.cpp)

add_executable(int_to_roman int_to_roman.cpp)

add_executable(sodoku sudoku.cpp)

add_executable(NQueens NQueens.cpp)

add_executable(rotate_array rotate_array.cpp)

add_executable(happy happy.cpp)

add_executable(DeleteListFromLast DeleteListFromLast.cpp)

add_executable(SearchinRotatedSortedArray SearchinRotatedSortedArray.cpp)

add_executable(Permutations Permutations.cpp)

add_executable(GroupAnagrams GroupAnagrams.cpp)

add_executable(MergeIntervals MergeIntervals.cpp)

add_executable(CountAndSay CountAndSay.cpp)

add_executable(SimplifyPath SimplifyPath.cpp)

add_executable(searchRange searchRange.cpp)

add_executable(short_complate_word short_complate_word.cpp)

add_executable(topKFrequent topKFrequent.cpp)

add_executable(numIslands numIslands.cpp)

add_executable(removeKdigits removeKdigits.cpp)

add_executable(Triangle Triangle.cpp)

add_executable(coinChange coinChange.cpp)

add_executable(mergeKLists mergeKLists.cpp)

add_executable(MaximalRectangle MaximalRectangle.cpp)

add_executable(LFUCache LFUCache.cpp)

add_executable(test test.cpp)

add_executable(countSubstrings countSubstrings.cpp)

add_executable(rotate rotate.cpp)

add_executable(subarraySum subarraySum.cpp)

add_executable(calcEquation calcEquation.cpp)

add_executable(longestPalindrome longestPalindrome.cpp)

add_executable(lengthOfLongestSubstring lengthOfLongestSubstring.cpp)

add_executable(findClosestElements findClosestElements.cpp)

add_executable(kthSmallest kthSmallest.cpp)

add_executable(maxArea maxArea.cpp)

add_executable(3sum_closed 3sum_closed.cpp)

add_executable(letterCombinations letterCombinations.cpp)

add_executable(pathSum2 pathSum2.cpp)

add_executable(RansomNote RansomNote.cpp)

#add_executable(Student StudentAttendanceRecord1.cpp)

add_executable(ConvertSortedListtoBinarySearchTree ConvertSortedListtoBinarySearchTree.cpp)

add_executable(HandofStraights HandofStraights.cpp)

add_executable(AccountsMerge AccountsMerge.cpp )

add_executable(strongPasswordChecker strongPasswordChecker.cpp)

add_executable(countBattleships countBattleships.cpp)

add_executable(NumberofEnclaves NumberofEnclaves.cpp)

add_executable(maximalSquare maximalSquare.cpp)

add_executable(Heaters.cpp Heaters.cpp)

add_executable(RobotBoundedInCircle RobotBoundedInCircle.cpp)

add_executable(aeiou aeiou.cpp)

add_executable(isLongPressedName isLongPressedName.cpp)

add_executable(calculate calculate.cpp)

add_executable(word_break word_break.cpp)

add_executable(lengthLongestPath lengthLongestPath.cpp)

add_executable(checkInclusion checkInclusion.cpp)

add_executable(getPermutation getPermutation.cpp)

add_executable(buildTree buildTree.cpp)

add_executable(reverseWords reverseWords.cpp)

add_executable(solveNQueens solveNQueens.cpp)

add_executable(computeArea computeArea.cpp)

add_executable(aoi aoi.cpp)

add_executable(memory_leck_in_smart_pointer memory_leck_in_smart_pointer.cpp )
add_executable(memory_safe_in_smart_pointer memory_safe_in_smart_pointer.cpp)

add_executable(MyCircularQueue MyCircularQueue.cpp)
add_executable(MyCircularDeque MyCircularDeque.cpp)

add_executable(a_star a_star.cpp)

add_executable(a_start11 a_start11.cpp )

add_executable(minesweeper minesweeper.cpp)

add_executable(number-of-enclaves number-of-enclaves.cpp)

add_executable(SortList SortList.cpp)